# Zer0Specter

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  zerospecter.py
docs/: MODULES.md  USAGE.md
scripts/: install.sh
tests/: conftest.py  test_port_scanner.py  test_zip_cracker.py
zer0specter/: __init__.py  cli.py
zer0specter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zer0specter/gui/: __init__.py  app.py
zer0specter/modules/: __init__.py  ip_geo.py  passwd_gen.py  port_scanner.py  sniffer.py  wifi_attack.py  zip_cracker.py
zer0specter/utils/: __init__.py  banner.py  logger.py  validators.py
